deployment/statefulset.yaml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: fast-api
#   labels:
#     app: postgresql
# spec:
#   serviceName: postgresql # Headless service name
#   replicas: 1
#   selector:
#     matchLabels:
#       app: postgresql
#   template:
#     metadata:
#       labels:
#         app: postgresql
#     spec:
#       containers:
#         -name: postgresql
#         image: postgres:17
#         ports:
#           -containerPort: 5432
#         env:
#           - name: POSTGRES_PASSWORD  # take it from secret.yaml
#             valueFrom:
#               secretKeyRef:
#                 name: postgresql
#                 key: postgres
#           - name: POSTGRES_USER  
#             value: postgres
#         volumeMounts:
#           -name: postgresql 
#           mouthPath: /var/lib/postgresql
#   volumeClaimTemplates:
#   - metadata:
#      name: postgresql
#   spec:
#     accessModes: ["ReadWriteOnce"]
#     resources:
#       requests:
#         storage: 100Mi

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: devsecops
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:17

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage

    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 10Gi
