deployment/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: fastapi
spec:
  clusterIP: None # this is will create headless service
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgresql
